@@ -305,6 +305,7 @@ class Products extends MX_Controller
               'prod_vidlink'=>$this->input->post('videolink'),
               'prod_maplink'=>$this->input->post('maplink'),
               'prod_taxdue'=>$this->input->post('taxdue'),
+              'prod_locrentdue'=>$this->input->post('locdue'),
               'prod_rentdue'=>$this->input->post('rentdue'),
               'prod_insurancedue'=>$this->input->post('insurancedue'),
               'prod_description'=>$this->input->post('proddesc'),
@@ -334,6 +335,7 @@ class Products extends MX_Controller
               'prod_vidlink'=>$this->input->post('videolink'),
               'prod_maplink'=>$this->input->post('maplink'),
               'prod_taxdue'=>$this->input->post('taxdue'),
+              'prod_locrentdue'=>$this->input->post('locdue'),
               'prod_rentdue'=>$this->input->post('rentdue'),
               'prod_insurancedue'=>$this->input->post('insurancedue'),
               'prod_description'=>$this->input->post('proddesc'),
@@ -381,6 +383,7 @@ class Products extends MX_Controller
           'prod_vidlink'=>$this->input->post('videolink'),
           'prod_maplink'=>$this->input->post('maplink'),
           'prod_taxdue'=>$this->input->post('taxdue'),
+          'prod_locrentdue'=>$this->input->post('locdue'),
           'prod_rentdue'=>$this->input->post('rentdue'),
           'prod_insurancedue'=>$this->input->post('insurancedue'),
           'prod_description'=>$this->input->post('proddesc'),
