@@ -158,6 +158,19 @@
                               </div>
                             </div>
                             <div class="form-group">
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Rent Due Date
+                              </label>
+                              <div class="col-md-6 col-sm-6 col-xs-12">
+                                <div class='input-group date dtp'>
+                                  <span class="input-group-addon">
+                                    <span class="glyphicon glyphicon-calendar"></span>
+                                  </span>
+                                  <input id="rentdue" type='text' class="form-control input-group-addon" name="rentdue" value="" />
+                                </div>
+                                <span class="help-block"></span>
+                              </div>
+                            </div>
+                            <div class="form-group">
                               <label class="control-label col-md-3 col-sm-3 col-xs-12">Tax Due Date
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
@@ -171,14 +184,14 @@
                               </div>
                             </div>
                             <div class="form-group">
-                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Rent Due Date
+                              <label class="control-label col-md-3 col-sm-3 col-xs-12">Location Due Date
                               </label>
                               <div class="col-md-6 col-sm-6 col-xs-12">
                                 <div class='input-group date dtp'>
                                   <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-calendar"></span>
                                   </span>
-                                  <input id="rentdue" type='text' class="form-control input-group-addon" name="rentdue" value="" />
+                                  <input id="locdue" type='text' class="form-control input-group-addon" name="locdue" value="" />
                                 </div>
                                 <span class="help-block"></span>
                               </div>
