@@ -26,9 +26,10 @@
                   $('<td class="text-center">'+data[i]["CONS_NAME"]+'</td>'),
                   $('<td class="text-center">'+light+'</td>'),
                   $('<td class="text-center numm">'+data[i]["PROD_PRICE"]+'</td>'),
-                  $('<td data-order="'+rent+'" class="text-center">'+data[i]["PROD_RENTDUE"]+'</td>'),
-                  $('<td data-order="'+tax+'" class="text-center">'+data[i]["PROD_TAXDUE"]+'</td>'),
-                  $('<td data-order="'+insu+'" class="text-center">'+data[i]["PROD_INSURANCEDUE"]+'</td>'),
+                  $('<td data-order="'+rent+'" class="text-center">'+moment(data[i]["PROD_RENTDUE"]).format('DD MMM YYYY')+'</td>'),
+                  $('<td data-order="'+tax+'" class="text-center">'+moment(data[i]["PROD_TAXDUE"]).format('DD MMM YYYY')+'</td>'),
+                  $('<td data-order="'+tax+'" class="text-center"></td>'),
+                  $('<td data-order="'+insu+'" class="text-center">'+moment(data[i]["PROD_INSURANCEDUE"]).format('DD MMM YYYY')+'</td>'),
                   $('<td data-order="'+data[i]["PROD_STS"]+'" class="text-center">'+pub+'</td>'),
                   $('<td class="text-center"><a href="products/crud/'+data[i]["PROD_CODE"]+'" target="blank__" title="Edit Data" class="btn btn-xs btn-primary btn-responsive"><span class="glyphicon glyphicon-pencil"></span> </a> <a href="javascript:void(0)" title="Hapus Data" class="btn btn-xs btn-danger btn-responsive" onclick="delete_prod('+"'"+data[i]["PROD_ID"]+"'"+')"><span class="glyphicon glyphicon-trash"></span> </a></td>')
                 ).appendTo('#tbcontent');
